# AINKA-kalpsoni

AINKA/: CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md
AINKA/cli/: Cargo.toml
AINKA/cli/src/: main.rs
AINKA/daemon/: Cargo.toml
AINKA/daemon/src/: ai_engine.rs  anomaly_detector.rs  config.rs  data_pipeline.rs  database.rs  ebpf_manager.rs  ipc_layer.rs  lib.rs  main.rs  ml_engine.rs  performance_optimizer.rs  policy_engine.rs  predictive_scaler.rs  security_monitor.rs  system_monitor.rs  telemetry_hub.rs  utils.rs
AINKA/docs/: IMPLEMENTATION_GUIDE.md  LINEAR_REGRESSION_GUIDE.md  architecture.md
AINKA/examples/: linear_regression_example.rs
AINKA/kernel/: Makefile  ainka_core.c  ainka_enhanced.c  ainka_lkm.c  ainka_simple.c
AINKA/kernel/ebpf/: ainka_monitors.c  ainka_tracepoints.c
AINKA/scripts/: build.sh  demo.sh  install.sh  integration_test.sh  test.sh  test_features.sh
