[package]
name = "ainka-daemon"
version = "0.2.0"
edition = "2021"
authors = ["AINKA Community"]
description = "AINKA AI Daemon - Intelligent Linux system optimization with real-time learning"
license = "Apache-2.0"
repository = "https://github.com/ainka-community/ainka"
keywords = ["linux", "kernel", "ai", "system", "monitoring", "optimization", "machine-learning"]
categories = ["system", "command-line-utilities"]

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI interface
clap = { version = "4.4", features = ["derive"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log = "0.4"
env_logger = "0.10"

# System monitoring and information
sysinfo = "0.30"
procfs = "0.15"
nix = "0.27"

# Configuration management
config = "0.14"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async utilities
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Mathematical operations and ML
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }
rand = "0.8"
rand_distr = "0.4"

# eBPF integration (when available)
aya = { version = "0.12", optional = true }
aya-log = { version = "0.2", optional = true }

# Network communication
reqwest = { version = "0.11", features = ["json"], optional = true }

# Database for metrics storage
rusqlite = { version = "0.29", features = ["bundled"], optional = true }

# System service management
systemd = "0.10"

# File system operations
walkdir = "2.4"

# Memory management
bytes = "1.5"

# HTTP server for API
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }

# Metrics and monitoring
prometheus = { version = "0.13", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
criterion = "0.5"

[[bin]]
name = "ainka-daemon"
path = "src/main.rs"

[features]
default = ["basic"]
basic = []
full = ["reqwest", "rusqlite", "aya", "aya-log", "axum", "tower", "prometheus"]
network = ["reqwest"]
storage = ["rusqlite"]
ebpf = ["aya", "aya-log"]
api = ["axum", "tower"]
metrics = ["prometheus"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1 